2004-03-25  Alexander Clausen <alex@skip86.com>
	
	* src/inkview.cpp Fix inkview crash on startup

2004-03-24  Ted Gould <ted@gould.cx>

	* Minor changes to get distcheck to work.

2004-03-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/draw-context.h, src/draw-context.cpp: Cleanup: greater
	conformance to CodingStyle.  Mostly whitespace changes.

2004-03-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/widgets/sp-widget.h, src/widgets/sp-widget.cpp
	(sp_widget_new_repr): Remove this unused function.

	* src/libnrtype/nr-rasterfont.cpp (nr_rasterfont_ensure_glyph_slot):
	Address compiler warning.

	* src/seltrans.cpp (sp_sel_trans_ungrab): Disable the persistent
	snapping stuff added 2004-02-19.

	* src/desktop-events.cpp (sp_dt_ruler_event): Minor cleanup.

2004-03-19  bulia byak <bulia@users.sourceforge.net>

	* src/selection-chemistry.cpp: Prevent it from scaling above 1e6 pt

	* src/preferences-skeleton.h src/dialogs/dialog-events.cpp: "Skip taskbar" hint
	for dialogs
 
	* src/selection-chemistry.cpp: Patch for copying gradients from johncliff

	* src/event-context.cpp: Increased accelerated-scroll delay

	* nr-pixops.h: INK_COMPOSE: Always-visible inversion compose method

	* sp-gradient.cpp: Default linear gradient goes through center
 
	* nr-plain-stuff.cpp: Tweaked checkerboard size and color
 
	* gradient-position.cpp: Inverse colors for handles, axes, and bbox; dragging
	snaps with Ctrl; radius handle in radial gradient
 
	* src/sp-rect.cpp src/sp-path.cpp: Finished fixing 918478

	* src/gradient-chemistry.cpp src/widgets/gradient-vector.cpp: Fix for 902319,
	remove some debug output
 
	* src/toolbox.cpp: Polygon mode off by default

	* src/toolbox.cpp: Crash fix, reported by David Christian Berg

	* src/radial.h src/nodepath.cpp: Moved Radial:: to nodepath.h for now

	* stringstream.h: New stream class for serialization

	* svg-path.cpp: Use new stream class
