@@ -1,3 +1,8 @@
+2004-03-24  Ted Gould <ted@gould.cx>
+
+    * src/extension/db.[ch]: Adding in functions to get lists of 
+	  input and output extensions for the file dialogs
+
 2004-03-25  Alexander Clausen <alex@skip86.com>
 	
 	* src/inkview.cpp Fix inkview crash on startup
